2004-10-11    <mschimek@users.sf.net>

	* configure.in: Make sure we check for libzvbi with -liconv
	  if necessary, bug #1044403.

2004-10-11    <mschimek@users.sf.net>
	
	* Release 0.7.3.

2004-10-10    <mschimek@users.sf.net>

	* help/C/commands.xml: Updated switch_mode, toggle_mode.
	* src/cmd.c (py_switch_mode, py_toggle_mode): Extended to switch
	  display mode and capture mode at once.

2004-10-09    <mschimek@users.sf.net>

	* src/audio.c (set_mute): OSD related crash fix by Sjoerd Simons.
	* Makefile.am (install-data-local): VPATH fix.
	* src/zvbi.c, src/zmisc.c, src/subtitle.h, src/subtitle.c,
	  src/main.c, src/globals.c, src/fullscreen.c,
	  plugins/Makefile.am (teletext subdir), src/globals.h: 
	  Didn't compile without libzvbi.
	* src/cmd.c (py_toggle_mode): Toggled wrong pair of the 3x3 modes.
	* plugins/teletext/window.c (create_main_menu),
	  src/fullscreen.c (start_fullscreen),
	  src/zapping.c (instance_init): Menu accelerators didn't work.

2004-10-08    <mschimek@users.sf.net>

	* help/C/zapzilla.xml, help/C/zapping.xml, help/C/settings.xml,
	  help/C/commands.xml: Syntax fixes.
	* zapping.desktop.in, po: Merged comment into name, not like
	  everyone knows what zapping means. 
	* Makefile.am (install-data-local): s/gconftool/gconftool-2.
	* plugins/alirc/alirc.c (legacy_zoom): Better to use py_toggle_mode.
	* src/cmd.c (py_switch_mode), src/fullscreen.c (stop_fullscreen),
	  src/zmisc.c (to_old_tveng_capture_mode), src/zapping.h:
	  DISPLAY_MODE_NONE considered harmful, made WINDOW the
	  default and fallback.

2004-10-04    <mschimek@users.sf.net>

	* Release 0.7.2.

2004-10-03    <mschimek@users.sf.net>

	* po/POTFILES.in: Added src/subtitle.c.
	* plugins/teletext/view.c (teletext_view_popup_menu_new):
	  Fixed context > teletext > save as / colors.
	* src/capture.c (capture_thread): Abort retry on thread join.
	(capture_stop): Force thread join when capture thread hangs.
	* help/C/zapping.xml, help/C/settings.xml, help/C/commands.xml: 